--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ allure {
         version.set("2.14.0")
     }
     adapter {
+        aspectjVersion.set("1.9.7")
         autoconfigure.set(true)
         aspectjWeaver.set(true)
         frameworks {
@@ -45,7 +46,8 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok:1.18.22'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
     testRuntimeOnly ("org.slf4j:slf4j-simple:1.7.29",
-            "org.junit.jupiter:junit-jupiter-engine:5.8.1")
+            "org.junit.jupiter:junit-jupiter-engine:5.7.2",
+            "org.aspectj:aspectjweaver:1.9.7")
 }
 
 test {
